k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # כופה מעבר ל-HTTPS בלבד
spec:
  tls:
  - hosts:
    - app.aui-assignment.local # דומיין פיקטיבי או אמיתי שנגדיר
    secretName: app-tls-secret # הסוד שיכיל את תעודת ה-SSL
  rules:
  - host: app.aui-assignment.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app-svc
            port:
              number: 80
